--- a/package.json
+++ b/package.json
@@ -12,11 +12,15 @@
     "node-sass": "^4.12.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-popup": "^0.10.0",
     "react-redux": "^7.0.3",
     "react-router-dom": "^5.0.0",
     "react-scripts": "3.0.0",
     "react-slick": "^0.24.0",
-    "redux": "^4.0.1"
+    "react-stripe-elements": "^3.0.0",
+    "reactjs-popup": "^1.3.2",
+    "redux": "^4.0.1",
+    "stripe": "^6.34.0"
   },
   "scripts": {
     "start": "react-scripts start",
