--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "react-stripe-elements": "^3.0.0",
     "reactjs-popup": "^1.3.2",
     "redux": "^4.0.1",
-    "stripe": "^6.34.0"
+    "stripe": "^6.34.0",
+    "twilio": "^3.31.0"
   },
   "scripts": {
     "start": "react-scripts start",
